--- a/pom.xml
+++ b/pom.xml
@@ -48,6 +48,16 @@
             <scope>test</scope>
         </dependency>
 
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-batch</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework.batch</groupId>
+            <artifactId>spring-batch-core</artifactId>
+        </dependency>
+
         <!-- Include swagger for API description -->
         <dependency>
             <groupId>io.springfox</groupId>
