--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,12 @@
 spring.jpa.properties.hibernate.jdbc.batch_size=10000
 spring.jpa.properties.hibernate.order_inserts=true
+#spring.batch.initialize-schema=ALWAYS
 
-spring.jpa.properties.hibernate.generate_statistics=true
-spring.jpa.show-sql=true
-#spring.jpa.hibernate.ddl-auto=create
+
+
+#spring.jpa.properties.hibernate.generate_statistics=true
+#spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=create
 
 spring.datasource.url=jdbc:mysql://localhost:3306/aplic_db?useTimezone=true&serverTimezone=UTC
 spring.datasource.username=root
