--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.jpa.properties.hibernate.jdbc.batch_size=10000
 spring.jpa.properties.hibernate.order_inserts=true
-#spring.batch.initialize-schema=ALWAYS
+spring.batch.initialize-schema=ALWAYS
 
 
 
