--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,6 +8,6 @@ spring.batch.initialize-schema=ALWAYS
 #spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=create
 
-spring.datasource.url=jdbc:mysql://localhost:3306/aplic_db?useTimezone=true&serverTimezone=UTC
+#spring.datasource.url=jdbc:mysql://localhost:3306/walletdb?useTimezone=true&serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=123456
